# Demo-Agent-system

./: .gitignore  README.md  config.py  fake_data.sql  main.py  pyproject.toml  train.ipynb  trainer.py
api/common/: logger.py
api/entities/: user.py
api/router/: infer.py  schema.py  service.py  tool_utils.py
api/utils/: service.py  tools.py
cli-tool/: cli.py
dataset/: formatter.py  loader.py  sampler.py
dataset/script/: format.py  sampling.py  score.py  train.py
dataset/utils/: cleaner.py  downloadData.py
orchestrator/: main.py  orchestrator.py  schema.py
orchestrator/model/: ModelService.py  QwenModel.py  prompt.py
orchestrator/nodes/: agent.py  chat.py  clarify.py  router.py  tool_call.py
orchestrator/nodes/prompts/: agent_node_prompt.py  chat_prompt.py  router_prompt.py
orchestrator/tools/: bash.py  constants.py  fetch.py  files.py  registry.py
