[project]
name = "malagasy-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "asyncpg>=0.31.0",
    "bitsandbytes>=0.49.2",
    "fastapi>=0.136.3",
    "langchain>=1.3.6",
    "langchain-core>=1.4.3",
    "langgraph>=1.2.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "transformers>=5.9.0",
    "unsloth>=2025.9.5",
    "uvicorn>=0.48.0",
]

[tool.uv.workspace]
members = [
    "trainer",
]
